--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,6 @@
   }
   :root {
 	--primary-color: #605DC8;
-	--secondary-color: #8B89E6;
-	--accent-color: #e8e7fa;
-	--shadow-color: #E8E8E8;
   }
   
   button.primary {
@@ -20,5 +17,13 @@
 	background: var(--primary-color);
 	color: white;
 	border-radius: 8px;
+  }
+  
+  input::-webkit-outer-spin-button{
+	-webkit-appearance: none;
+	margin: 0; 
+  }
+  input[type=number] {
+	  -moz-appearance:textfield;
   }
   
