--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,12 +37,19 @@ form {
 		text-align: center;
 		border: none;
 		background-color: white;	
+		margin-left: 6px;
 	}
 	input {
 		font-size: 16px;
 		height: 25px;
 		border: none;
 		border-bottom: 1px solid rgba(54, 47, 47, 0.696);
+		&:invalid{
+			border-bottom: 2px solid red;
+		}
+		&:focus{
+			outline: rgb(153, 153, 241) 2px solid ;
+		}
 	}
 
 }
